Fixed problem with search scoll on Safari.

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -16,6 +16,11 @@ body {
   position: relative;
 }
 
+html, body {
+  position: relative;
+  height: 100%;
+}
+
 /**
  * Make all elements from the DOM inherit from the parent box-sizing
  * Since `*` has a specificity of 0, it does not override the `html` value
