--- a/src/assets/sass/layout/_search.scss
+++ b/src/assets/sass/layout/_search.scss
@@ -1,5 +1,5 @@
 .search {
-  position: fixed;
+  position: absolute;
   z-index: 10;
   top: 0;
   bottom: 0;
@@ -7,6 +7,7 @@
   right: 0;
   background: rgba(26, 26, 26, 0.9);
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   color: #fff;
 
   @include media-breakpoint-down(sm) {
